--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "firebase": "^11.8.1",
     "framer-motion": "^12.14.0",
     "motion": "^12.15.0",
     "react": "^19.1.0",
