--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
-    "framer-motion": "^12.14.0",
+    "framer-motion": "^12.15.0",
     "motion": "^12.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
